package big_talk.chapter22.bridge0;

abstract class Implementor{
    public abstract void operation();
}

